--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "babel-plugin-react-remove-properties": "^0.3.0",
+    "check-prop-types": "^1.1.2",
     "cross-env": "^6.0.3",
     "customize-cra": "^0.8.0",
     "eslint": "^6.5.1",
