--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,6 @@ before_install:
 install:
   - yarn global add jest
 script:
-  - yarn && yarn client:install
-  - yarn lint:all
-  - yarn test:all
+  - yarn
+  - yarn lint
+  - yarn test
