--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.1",
     "react-scripts": "3.2.0",
     "react-test-renderer": "^16.10.2",
     "react-transition-group": "^4.3.0",
-    "use-reducer-logger": "^1.0.1"
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "babel-plugin-react-remove-properties": "^0.3.0",
