--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jotto",
+  "name": "safari-park",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -36,6 +36,7 @@
     "eslint-plugin-react-hooks": "^2.1.2",
     "husky": "^3.0.9",
     "lint-staged": "^9.4.2",
+    "moxios": "^0.4.0",
     "react-app-rewired": "^2.1.3"
   },
   "scripts": {
