--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "husky": "^3.0.9",
     "lint-staged": "^9.4.2",
     "moxios": "^0.4.0",
-    "react-app-rewired": "^2.1.3"
+    "react-app-rewired": "^2.1.3",
+    "redux-logger": "^3.0.6"
   },
   "scripts": {
     "clean": "rm -rf node_modules",
